Transfering over old PrototypeComponent code to AsmCustomerMapComponent. Some styles to make modal flexible to its content

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -20,7 +20,7 @@
     </div>
 
     <!-- Modal Body -->
-    <div class="cx-dialog-body modal-body">
+    <div class="cx-dialog-body">
       <div class="cx-dialog-row">
         <div class="cx-dialog-item">
           <div class="cx-tab-container">
