--- a/feature-libs/asm/components/asm-customer-360/asm-customer-map/asm-customer-map.component.scss
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-map/asm-customer-map.component.scss
@@ -1,117 +1,117 @@
 :host {
-    display: inline-grid;
-    font-size: 13px;
-    grid-gap: 12px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: auto 1fr;
-    margin: 0 auto;
-    width: 100%;
+  display: inline-grid;
+  font-size: 13px;
+  grid-gap: 12px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto 1fr;
+  margin: 0 auto;
+  width: 100%;
 }
 
 .bold {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 .store-count {
-    grid-column: 1 / 3;
+  grid-column: 1 / 3;
 }
 
 .store-details {
-    display: flex;
-    flex-direction: row;
-    margin-bottom: 12px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 12px;
 
-    &-info {
-        margin-left: 8px;
-    }
+  &-info {
+    margin-left: 8px;
+  }
 }
 
 .store-listing-item {
-    cursor: pointer;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+
+  &.selected {
+    background: #96bbe1;
+    color: white;
+
+    &::after {
+      align-self: center;
+      border: 14px solid transparent;
+      border-right-color: white;
+      content: '';
+      display: block;
+      height: 28px;
+      position: absolute;
+      right: 0;
+      width: 28px;
+    }
+  }
+
+  &:not(.selected) {
+    &:hover {
+      background: #d2dbe6;
+    }
+
+    &:not(:hover) {
+      &:nth-of-type(2n + 1) {
+        background: #eef3f7;
+      }
+
+      &:nth-of-type(2n) {
+        background: white;
+      }
+    }
+  }
+
+  &-details {
+    padding: 0 8px;
+  }
+
+  &-distance {
+    align-items: center;
+    border-left: 1px solid #dce1e8;
+    box-sizing: border-box;
     display: flex;
-    flex-direction: row;
-    position: relative;
+    justify-content: center;
+    padding: 0 4px;
+    margin-left: auto;
+    width: 100px;
+  }
 
-    &.selected {
-        background: #96bbe1;
-        color: white;
-
-        &::after {
-            align-self: center;
-            border: 14px solid transparent;
-            border-right-color: white;;
-            content: '';
-            display: block;
-            height: 28px;
-            position: absolute;
-            right: 0;
-            width: 28px;
-        }
-    }
-
-    &:not(.selected) {
-        &:hover {
-            background: #d2dbe6;
-        }
-
-        &:not(:hover) {
-            &:nth-of-type(2n+1) {
-                background: #eef3f7;
-            }
-
-            &:nth-of-type(2n) {
-                background: white;
-            }
-        }
-    }
-
-    &-details {
-        padding: 0 8px;
-    }
-
-    &-distance {
-        align-items: center;
-        border-left: 1px solid #dce1e8;
-        box-sizing: border-box;
-        display: flex;
-        justify-content: center;
-        padding: 0 4px;
-        margin-left: auto;
-        width: 100px;
-    }
-
-    &-text {
-        text-transform: uppercase;
-    }
+  &-text {
+    text-transform: uppercase;
+  }
 }
 
 .store-map {
-    border: 0;
-    border-bottom: 1px solid #eeeeee;
-    border-top: 1px solid #eeeeee;
-    padding: 12px 0;
-    width: 100%;
+  border: 0;
+  border-bottom: 1px solid #eeeeee;
+  border-top: 1px solid #eeeeee;
+  padding: 12px 0;
+  width: 100%;
 }
 
 .store-openings {
-    font-size: 14px;
+  font-size: 14px;
 
-    &-date {
-        align-items: center;
-        display: flex;
-        flex-direction: row;
-    }
+  &-date {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+  }
 
-    &-dates {
-        margin-bottom: 24px;
-    }
+  &-dates {
+    margin-bottom: 24px;
+  }
 
-    &-day {
-        display: inline-block;
-        margin-right: 4px;
-        overflow-x: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        width: 60px;
-    }
+  &-day {
+    display: inline-block;
+    margin-right: 4px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 60px;
+  }
 }
