--- a/feature-libs/asm/components/customer-emulation/customer-emulation.component.html
+++ b/feature-libs/asm/components/customer-emulation/customer-emulation.component.html
@@ -4,7 +4,12 @@
     <label class="cx-asm-uid">{{ customer?.uid }}</label>
   </div>
   <cx-asm-bind-cart></cx-asm-bind-cart>
-  <button formcontrolname="logoutCustomer" (click)="logoutCustomer()">
+  <button class="cx-360-button" (click)="openCustomer360()">Customer360</button>
+  <button
+    class="cx-logout-button"
+    formcontrolname="logoutCustomer"
+    (click)="logoutCustomer()"
+  >
     {{ 'asm.endSession' | cxTranslate }}
   </button>
 </ng-container>
