--- a/feature-libs/asm/components/asm-customer-360/asm-customer-map/asm-customer-map.component.scss
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-map/asm-customer-map.component.scss
@@ -12,8 +12,29 @@
   font-weight: 600;
 }
 
+.pagination {
+  margin-left: auto;
+
+  &-arrow {
+    background: none;
+    border: none;
+    color: #0486e0;
+    font-weight: 600;
+    padding: 12px;
+
+    &:hover {
+      opacity: 0.3;
+    }
+
+    &-right {
+      margin-left: 8px;
+    }
+  }
+}
+
+.pagination,
 .store-count {
-  grid-column: 1 / 3;
+  align-self: center;
 }
 
 .store-details {
