--- a/feature-libs/asm/styles/components/_index.scss
+++ b/feature-libs/asm/styles/components/_index.scss
@@ -1,3 +1,4 @@
+@import '~@spartacus/styles/scss/core';
 @import './_asm-bind-cart-dialog.component.scss';
 @import './_asm-main-ui.component.scss';
 @import './_asm-session-timer.component.scss';
@@ -8,11 +9,14 @@
 @import './_customer-list.component.scss';
 @import './_asm-bind-cart.component.scss';
 @import './_dot-spinner.component.scss';
+@import './_asm-customer-360.component.scss';
+@import './_asm-customer-profile.scss';
+@import './_asm-customer-overview.scss';
 
 $asm-components-allowlist: cx-asm-main-ui, cx-asm-session-timer,
-  cx-asm-bind-cart, cx-asm-bind-cart-dialog, cx-asm-toggle-ui,
-  cx-csagent-login-form, cx-customer-emulation, cx-customer-selection,
-  cx-dot-spinner, cx-customer-list !default;
+  cx-asm-bind-cart, cx-asm-toggle-ui, cx-csagent-login-form,
+  cx-customer-emulation, cx-customer-selection, cx-dot-spinner, cx-customer-list,
+  cx-asm-customer-360, cx-asm-customer-profile, cx-asm-customer-overview !default;
 
 $skipComponentStyles: () !default;
 
