--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -32,10 +32,18 @@
           </div>
         </div>
       </div>
-      <div class="cx-tab-content">
-        <cx-asm-customer-overview *ngIf="activeTab === 0" [customer]="customer"></cx-asm-customer-overview>
-        <cx-asm-customer-profile *ngIf="activeTab === 1" [customer]="customer"></cx-asm-customer-profile>
-
+      <div class="cx-tab-content modal-body">
+        <ng-container [ngSwitch]="activeTab">
+          <cx-asm-customer-overview *ngSwitchCase="0" [customer]="customer"></cx-asm-customer-overview>
+          <cx-asm-customer-profile *ngSwitchCase="1" [customer]="customer"></cx-asm-customer-profile>
+          <cx-asm-customer-activity *ngSwitchCase="2"></cx-asm-customer-activity>
+          <cx-asm-customer-feedback *ngSwitchCase="3"></cx-asm-customer-feedback>
+          <cx-asm-customer-promotions *ngSwitchCase="4"></cx-asm-customer-promotions>
+          <cx-asm-customer-map *ngSwitchCase="5"></cx-asm-customer-map>
+          <span *ngSwitchDefault>
+            {{ getActiveTabContent() }}
+          </span>
+        </ng-container>
       </div>
     </div>
   </ng-container>
