Task/update asm 360 (#16064)
* add navigation to customer 360 dialog

* remove unnecessary styling

* Asm360Overview route navigations close the modal properly.
Lint fix using prettier:fix

Co-authored-by: Paige Barron <paige.barron@sap.com>

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-360.component.html
@@ -38,11 +38,24 @@
       </div>
       <div class="cx-tab-content modal-body">
         <ng-container [ngSwitch]="activeTab">
-          <cx-asm-customer-overview *ngSwitchCase="0" [customer]="customer"></cx-asm-customer-overview>
-          <cx-asm-customer-profile *ngSwitchCase="1" [customer]="customer"></cx-asm-customer-profile>
-          <cx-asm-customer-activity *ngSwitchCase="2"></cx-asm-customer-activity>
-          <cx-asm-customer-feedback *ngSwitchCase="3"></cx-asm-customer-feedback>
-          <cx-asm-customer-promotions *ngSwitchCase="4"></cx-asm-customer-promotions>
+          <cx-asm-customer-overview
+            *ngSwitchCase="0"
+            [customer]="customer"
+            (navigate)="navigateTo($event)"
+          ></cx-asm-customer-overview>
+          <cx-asm-customer-profile
+            *ngSwitchCase="1"
+            [customer]="customer"
+          ></cx-asm-customer-profile>
+          <cx-asm-customer-activity
+            *ngSwitchCase="2"
+          ></cx-asm-customer-activity>
+          <cx-asm-customer-feedback
+            *ngSwitchCase="3"
+          ></cx-asm-customer-feedback>
+          <cx-asm-customer-promotions
+            *ngSwitchCase="4"
+          ></cx-asm-customer-promotions>
           <cx-asm-customer-map *ngSwitchCase="5"></cx-asm-customer-map>
           <span *ngSwitchDefault>
             {{ getActiveTabContent() }}
