--- a/feature-libs/asm/components/asm-customer-360/asm-customer-feedback/asm-customer-feedback.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-feedback/asm-customer-feedback.component.html
@@ -1,1 +1,4 @@
-<cx-asm-customer-table *ngFor="let fragment of uiFragments" [fragment]="fragment"></cx-asm-customer-table>
+<cx-asm-customer-table
+  *ngFor="let fragment of uiFragments"
+  [fragment]="fragment"
+></cx-asm-customer-table>
