--- a/feature-libs/asm/components/asm-customer-360/asm-customer-overview/asm-customer-overview.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-overview/asm-customer-overview.component.html
@@ -103,15 +103,12 @@
       <h3>
         <a
           tabindex="0"
-          [attr.aria-label]="
-            'asm.customerOverview.interests'
-              | cxTranslate
-          "
+          [attr.aria-label]="'asm.customerOverview.interests' | cxTranslate"
           role="link"
           class="cx-overview-title-link"
           (click)="goToMyInterests()"
         >
-        {{ 'asm.customerOverview.interests' | cxTranslate }}
+          {{ 'asm.customerOverview.interests' | cxTranslate }}
         </a>
       </h3>
     </div>
