--- a/feature-libs/asm/components/asm-customer-360/asm-customer-overview/asm-product-item/asm-product-item.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-overview/asm-product-item/asm-product-item.component.html
@@ -11,16 +11,20 @@
   ></cx-media>
 </a>
 <div class="asm-product-item-content">
-  <a tabindex="0"
-  [attr.aria-label]="product?.name"
-  role="link"
-  (click)="selectProduct.emit(product)"
-  class="cx-overview-product-name"><span title="{{product?.name}}">{{
-    product?.name
-  }}</span></a>
+  <a
+    tabindex="0"
+    [attr.aria-label]="product?.name"
+    role="link"
+    (click)="selectProduct.emit(product)"
+    class="cx-overview-product-name"
+    ><span title="{{ product?.name }}">{{ product?.name }}</span></a
+  >
   <div *ngIf="isOrderEntry">{{ product?.code }}</div>
   <div *ngIf="isOrderEntry">{{ price?.formattedValue }}</div>
-  <div class="cx-overview-out-of-stock" *ngIf="!isOrderEntry && product.stock?.stockLevelStatus === 'outOfStock'">
+  <div
+    class="cx-overview-out-of-stock"
+    *ngIf="!isOrderEntry && product.stock?.stockLevelStatus === 'outOfStock'"
+  >
     {{ 'asm.customerOverview.outOfStock' | cxTranslate }}
   </div>
 </div>
