--- a/feature-libs/asm/components/asm-customer-360/asm-customer-promotions/asm-customer-promotions.component.html
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-promotions/asm-customer-promotions.component.html
@@ -1,1 +1,4 @@
-<cx-asm-customer-listing *ngFor="let fragment of uiFragments" [fragment]="fragment"></cx-asm-customer-listing>
+<cx-asm-customer-listing
+  *ngFor="let fragment of uiFragments"
+  [fragment]="fragment"
+></cx-asm-customer-listing>
