--- a/feature-libs/asm/styles/components/_asm-customer-listing.component.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-listing.component.scss
@@ -111,7 +111,9 @@
         margin-right: 1px;
         margin-bottom: -1px;
 
-        &.active, &:hover, &:focus {
+        &.active,
+        &:hover,
+        &:focus {
           color: #0486e0;
           border-bottom: solid;
           border-width: 2px;
