--- a/feature-libs/asm/styles/components/_asm-customer-table.component.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-table.component.scss
@@ -60,7 +60,8 @@
       }
     }
 
-    th, td {
+    th,
+    td {
       text-align: left;
       vertical-align: top;
       padding: 10px;
@@ -86,12 +87,14 @@
       cursor: pointer;
       user-select: none;
 
-      &:hover, &.active {
+      &:hover,
+      &.active {
         color: #454a5d;
       }
 
       &.active {
-        &.desc::after, &.asc::after {
+        &.desc::after,
+        &.asc::after {
           content: '';
           margin-left: 8px;
           border-left: 5px solid transparent;
