Task: customer 360 updates (#16071)
* Adding ASM Customer 360 configs for page size; not used yet however

* Storing Google Maps API key in ASM configuration instead of hardcoded in component:

* Updating Customer Overview SCSS and some of the tab SCSS

--- a/feature-libs/asm/components/asm-customer-360/asm-customer-map/asm-customer-map.component.scss
+++ b/feature-libs/asm/components/asm-customer-360/asm-customer-map/asm-customer-map.component.scss
@@ -5,6 +5,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto 1fr;
   margin: 0 auto;
+  padding: 0 28px;
   width: 100%;
 }
 
