--- a/feature-libs/asm/styles/components/_asm-customer-overview.scss
+++ b/feature-libs/asm/styles/components/_asm-customer-overview.scss
@@ -1,18 +1,75 @@
 %cx-asm-customer-overview {
   width: 100%;
   .cx-overview-title-link {
-    color: var(--cx-color-dark);
     text-decoration: none;
     cursor: pointer;
-    &:hover {
-      color: var(--cx-color-primary);
-    }
   }
   .cx-asm-overview-header-infor {
     display: flex;
   }
   cx-asm-product-item {
     display: flex;
+  }
+  .customer-description {
+    background-color: rgb(238, 243, 247);
+    display: flex;
+    flex-direction: row;
+
+    &-chip {
+      background-color: white;
+      border-radius: 15px;
+      font-size: 12px;
+      font-weight: 600;
+      margin-bottom: 12px;
+      margin-left: 8px;
+      padding: 0 16px;
+    }
+
+    &-chips {
+      display: flex;
+      flex-flow: row wrap;
+      padding: 0 20px;
+    }
+
+    &-section {
+      align-items: center;
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+
+      &:nth-of-type(n + 2) {
+        border-left: 1px solid #dfe5ec;
+      }
+    }
+
+    h3 {
+      padding: 32px 0 12px;
+      text-transform: uppercase;
+    }
+  }
+  .section-header {
+    align-items: center;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin-bottom: 16px;
+
+    h3 {
+      margin-bottom: 0;
+      text-align: center;
+      width: 100%;
+    }
+  }
+  .cart {
+    &-divider {
+      border-right: 1px solid #e1e7ee;
+      height: 20px;
+    }
+
+    &-total-no-items,
+    &-total-price {
+      padding: 0 16px;
+    }
   }
   .cx-asm-overview-items {
     display: flex;
